--- a/src/index.css
+++ b/src/index.css
@@ -8,19 +8,30 @@ body {
 }
 
 header {
-    padding: 15px 0;
+    height: 55px;
     background-color: rgb(255, 98, 98);
     color: white;
-}
-
-nav {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
 }
 
-.nav-globe {
+
+.globe {
     width: 30px;
     filter: invert(1);
+}
+
+header > h1 {
+    font-size: 0.9rem;
+    font-weight: 500;
+}
+
+.entry {
+    margin: 50px 100px;
+}
+
+.marker {
+    width: 25px;
 }
